oss-dev-analytics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oss-dev-analytics
  namespace: oss-dev-analytics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /oss_dev_analytics(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
